# kimap_explorer

./: .gitignore  Cargo.toml  metadata.json
api/: kimap-explorer:doria.kino-v0.wit  kimap_explorer:hexencode1.os-v0.wit  kimap_explorer:mothu-et-doria.os-v0.wit  kimap_explorer:pacificat.os-v0.wit
explorer/: Cargo.toml
explorer/src/: lib.rs
kimap_explorer/: Cargo.toml
kimap_explorer/src/: lib.rs
pkg/: manifest.json
pkg/ui/: index.html
ui/: index.html  vite.config.ts
ui/src/: App.tsx  abis.ts  helpers.ts  index.css  main.tsx
ui/src/abis/: helpers.ts  index.ts
ui/src/components/: DataKeyElement.tsx  InfoContainer.tsx  KimapExplorer.tsx  NodeElement.tsx  TreeContainer.tsx
