[package]
name = "explorer"
version = "1.0.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.8.15"
anyhow = "1.0"
kinode-app-framework = { git = "https://github.com/kinode-dao/app-framework.git", rev = "178b411" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
