[package]
name = "kimap_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.6"
anyhow = "1.0"
bincode = "1.3.3"
# kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.0" }
kinode_process_lib = { path = "../../../process_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
